--- a/package.json
+++ b/package.json
@@ -3,22 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm run dev:next\" \"npm run dev:server\"",
+    "dev:next": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
+    "dev:server": "nodemon --watch server --exec ts-node --project tsconfig.server.json server/server.ts",
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/hls.js": "^0.13.3",
+    "concurrently": "^9.1.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "hls.js": "^1.6.2",
+    "mediasoup": "^3.15.8",
+    "mediasoup-client": "^3.11.0",
+    "next": "^15.3.2",
+    "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.8"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
